# webp-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
webpconverter/: __init__.py  cli.py  converter.py  estimator.py  planner.py  reporter.py  scanner.py
